--- a/pages/auth/index.html
+++ b/pages/auth/index.html
@@ -1,13 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
-</head>
-<body>
-<nav></nav>
- <section>
- </section>
-</body>
+<html lang="en" class="h-100">
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BXU BAS: Role Selection</title>
+  <link
+   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+   rel="stylesheet"
+  />
+  <link
+   href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
+   rel="stylesheet"
+  />
+  <!-- Add Poppins font -->
+  <link
+   href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+   rel="stylesheet"
+  />
+  <style>
+   body {
+    font-family: "Poppins", sans-serif;
+   }
+  </style>
+ </head>
+ <body class="vh-100 d-flex align-items-center justify-content-center bg-light">
+  <div class="container text-center">
+   <!-- Header -->
+   <div class="mb-5">
+    <img
+     src="../../assets/images/bxu-logo.png"
+     alt="BXU Logo"
+     class="img-fluid mb-3"
+     style="max-width: 150px"
+    />
+    <h2 class="mb-4">BXU Business Authority Sentinel</h2>
+    <p class="text-muted">Select your role to continue</p>
+   </div>
+
+   <!-- Role Selection Cards -->
+   <div class="row justify-content-center g-4">
+    <div class="col-md-4">
+     <a href="adminLogin.html" class="text-decoration-none">
+      <div class="card h-100 shadow-sm rounded-4 hover-overlay">
+       <div class="card-body text-center p-5">
+        <i class="bi bi-person-workspace fs-1 mb-3 text-primary"></i>
+        <h4 class="card-title">Administrator</h4>
+        <p class="card-text text-muted">System management and oversight</p>
+       </div>
+      </div>
+     </a>
+    </div>
+
+    <div class="col-md-4">
+     <a href="inspectorLogin.html" class="text-decoration-none">
+      <div class="card h-100 shadow-sm rounded-4 hover-overlay">
+       <div class="card-body text-center p-5">
+        <i class="bi bi-clipboard-check fs-1 mb-3 text-primary"></i>
+        <h4 class="card-title">Inspector</h4>
+        <p class="card-text text-muted">Field operations and reporting</p>
+       </div>
+      </div>
+     </a>
+    </div>
+   </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+ </body>
 </html>
