--- a/pages/auth/adminLogin.html
+++ b/pages/auth/adminLogin.html
@@ -39,7 +39,7 @@
 
     <!-- Right column with login form -->
     <div class="col-md-6 d-flex align-items-center justify-content-center">
-     <div class="card shadow-lg rounded-4" style="min-width: 400px">
+     <div class="card shadow-sm rounded-4" style="min-width: 400px">
       <div class="card-body p-5">
        <h4 class="card-title text-center mb-4">Admin Login</h4>
 
