--- a/pages/auth/adminLogin.html
+++ b/pages/auth/adminLogin.html
@@ -86,7 +86,7 @@
     const password = document.getElementById("password").value;
 
     if (username === "admin" && password === "admin") {
-     window.location.href = "dashboard.html";
+     window.location.href = "admin.html";
     } else {
      alert("Invalid username or password");
     }
