--- a/pages/inspector/inspector.html
+++ b/pages/inspector/inspector.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BXU BAS: Dashboard</title>
+  <title>BXU BAS: Inspector</title>
   <link
    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
    rel="stylesheet"
@@ -57,7 +57,7 @@
     <div id="header"></div>
 
     <!-- Include Content -->
-    <div id="content" class="5"></div>
+    <!-- <div id="content" class="5"></div> -->
    </main>
   </div>
 
