--- a/pages/auth/adminLogin.html
+++ b/pages/auth/adminLogin.html
@@ -16,29 +16,40 @@
    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
    rel="stylesheet"
   />
+  <!-- Add Toastify CSS -->
+  <link
+   rel="stylesheet"
+   href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+  />
   <style>
    body {
     font-family: "Poppins", sans-serif;
    }
+   img {
+    max-height: 100%; /* Prevents overflow */
+    max-width: 100%; /* Ensures responsiveness */
+    object-fit: contain; /* Maintains aspect ratio */
+   }
   </style>
  </head>
- <body id="adminLogin" class="vh-100 d-flex align-items-center bg-light">
+ <body class="vh-100">
   <div class="container-fluid h-100">
    <div class="row h-100">
-    <!-- Left column with background -->
+    <!-- Left column with background (larger) -->
     <div
-     class="col-xl-6 bg-primary d-flex align-items-center justify-content-center"
+     class="col-lg-8 d-flex align-items-center justify-content-center text-white"
     >
      <img
-      src="../../assets/images/bxu-logo.png"
+      src="../../assets/adminLoginPicture.jpg"
       alt="BXU Logo"
-      class="img-fluid"
-      style="max-width: 300px"
+      class="vh-100"
      />
     </div>
 
-    <!-- Right column with login form -->
-    <div class="col-md-6 d-flex align-items-center justify-content-center">
+    <!-- Right column with login form (smaller) -->
+    <div
+     class="col-lg-4 d-flex align-items-center justify-content-center bg-light"
+    >
      <div class="card shadow-sm rounded-4" style="min-width: 400px">
       <div class="card-body p-5">
        <h4 class="card-title text-center mb-4">Admin Login</h4>
@@ -46,7 +57,7 @@
        <form id="adminLoginForm">
         <div class="mb-3">
          <label for="email" class="form-label small">Email</label>
-         <input type="text" class="form-control small" id="username" required />
+         <input type="text" class="form-control small" id="email" required />
         </div>
 
         <div class="mb-3">
@@ -61,7 +72,9 @@
 
         <div class="mb-3 form-check">
          <input type="checkbox" class="form-check-input" id="rememberMe" />
-         <label class="form-check-label small" for="rememberMe">Remember me</label>
+         <label class="form-check-label small" for="rememberMe"
+          >Remember me</label
+         >
         </div>
 
         <button type="submit" class="btn btn-primary w-100 mb-3">Login</button>
@@ -75,20 +88,68 @@
     </div>
    </div>
   </div>
+  <!-- Add Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
+  <!-- Add Toastify JS -->
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <!-- API script -->
+  <script type="module">
+   import CONFIG from "/scripts/config.js";
+
    const adminLoginForm = document.getElementById("adminLoginForm");
 
-   adminLoginForm.addEventListener("submit", (e) => {
+   adminLoginForm.addEventListener("submit", async (e) => {
     e.preventDefault();
 
-    const username = document.getElementById("username").value;
+    // Get the values from the form fields
+    const email = document.getElementById("email").value;
     const password = document.getElementById("password").value;
 
-    if (username === "admin" && password === "admin") {
-     window.location.href = "admin.html";
+    console.log(email, password);
+
+    const apiUrl = CONFIG.API_BASE_URL;
+
+    console.log(apiUrl);
+
+    // Send the login data to the backend
+    const response = await fetch(CONFIG.API_BASE_URL + "/admin-login", {
+     method: "POST",
+     headers: {
+      "Content-Type": "application/json",
+     },
+     body: JSON.stringify({
+      email,
+      password,
+     }),
+    });
+    console.log(response);
+    const data = await response.json();
+
+    console.log(data);
+    // Check if the login is successful
+    if (response.ok) {
+     Toastify({
+      text: "Login Successful! Redirecting...",
+      duration: 3000,
+      gravity: "top", // Position of the toast
+      position: "center", // Center alignment
+      close: true, // Show close button
+     }).showToast();
+     setTimeout(() => {
+      window.location.href = "admin/admin.html";
+     }, 3000);
     } else {
-     alert("Invalid username or password");
+     // Show a Toastify notification for invalid login
+     Toastify({
+      text: data.message,
+      duration: 3000,
+      gravity: "top", // Position of the toast
+      position: "center", // Center alignment
+      close: true, // Show close button
+      style: {
+       background: "red", // Red background for error
+      },
+     }).showToast();
     }
    });
   </script>
