--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BXU BAS: Dashboard</title>
+  <title>Admin Dashboard</title>
   <link
    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
    rel="stylesheet"
@@ -11,13 +11,6 @@
   <link
    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
    rel="stylesheet"
-  />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-   href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-   rel="stylesheet"
-  />
   />
   <link rel="stylesheet" href="css/main.css" />
   <style>
@@ -48,93 +41,93 @@
   </div>
 
   <script>
-   fetch("components/header.html")
-    .then((res) => res.text())
-    .then((data) => {
-     const headerElement = document.getElementById("header");
-     headerElement.innerHTML = data;
-
-     // Execute scripts inside the dynamically loaded HTML
-     const scriptTags = headerElement.querySelectorAll("script");
-     scriptTags.forEach((script) => {
-      const newScript = document.createElement("script");
-      newScript.textContent = script.textContent;
-      document.body.appendChild(newScript); // Append to body to execute
-      document.body.removeChild(newScript); // Remove after execution
-     });
-    });
-
-   // Load the sidebar
-   fetch("components/sidebar.html")
-    .then((res) => res.text())
-    .then((data) => {
-     document.getElementById("sidebar").innerHTML = data;
-
-     // Add event listeners to the links
-     const links = document.querySelectorAll(".nav-links a");
-     links.forEach((link) => {
-      link.addEventListener("click", (event) => {
-       event.preventDefault(); // Prevent default behavior here
-       const page = link.getAttribute("href").substring(1) + ".html"; // Get the page name from the href
-       loadContent(page, link, event); // Pass the actual event object
-      });
-     });
-
-     // Load the default content on page load
-     const hash = window.location.hash || "#dashboard"; // Default to dashboard if no hash
-     const page = hash.substring(1) + ".html"; // Get the page name from the hash
-     const activeLink =
-      document.querySelector(`.nav-links a[href="${hash}"]`) ||
-      document.querySelector(".nav-links a.active");
-
-     // Call loadContent with a mock event object for initial load
-     loadContent(page, activeLink, { preventDefault: () => {} }); // Mock event
-    });
-
-   // Function to load content
-   function loadContent(page, element, event) {
-    // Prevent default anchor behavior
-    event.preventDefault();
-
-    // Adjust the path to include 'components/'
-    const fullPath = `components/${page}`; // This assumes the files are in the components directory
-
-    console.log("Fetching content from:", fullPath); // Log the page being fetched
-
-    // Fetch the content of the page
-    fetch(fullPath)
-     .then((response) => {
-      if (!response.ok) {
-       throw new Error("Network response was not ok: " + response.statusText);
-      }
-      return response.text();
-     })
+   // Load the header and sidebar dynamically
+   function loadHeader() {
+    fetch("components/header.html")
+     .then((res) => res.text())
      .then((data) => {
-      // Insert the content into the content area
+      document.getElementById("header").innerHTML = data;
+      // Execute the script if any exists in header
+      executeScriptsInElement(document.getElementById("header"));
+     })
+     .catch((error) => console.error("Error loading header:", error));
+   }
+
+   function loadSidebar() {
+    fetch("components/sidebar.html")
+     .then((res) => res.text())
+     .then((data) => {
+      document.getElementById("sidebar").innerHTML = data;
+
+      // Add event listeners to sidebar links
+      const links = document.querySelectorAll(".nav-links a");
+      links.forEach((link) => {
+       link.addEventListener("click", (event) => {
+        event.preventDefault();
+        const page = link.getAttribute("href").substring(1) + ".html";
+        loadContent(page, link); // Pass the link to update active class
+       });
+      });
+
+      // Load default content (dashboard)
+      loadContent("dashboard.html", document.querySelector(".nav-links a"));
+     })
+     .catch((error) => console.error("Error loading sidebar:", error));
+   }
+
+   // Load the content dynamically and insert it into the #content div
+   function loadContent(page, link = null) {
+    const fullPath = `components/${page}`;
+
+    fetch(fullPath)
+     .then((response) => response.text())
+     .then((data) => {
       const contentDiv = document.getElementById("content");
       if (contentDiv) {
        contentDiv.innerHTML = data;
+       // Execute any scripts from the loaded content
+       executeScriptsInElement(contentDiv);
 
        // Remove 'active' class from all links
        const links = document.querySelectorAll(".nav-links a");
        links.forEach((link) => link.classList.remove("active"));
 
        // Add 'active' class to the clicked link
-       element.classList.add("active");
-      } else {
-       console.error("Content div not found");
+       if (link) {
+        link.classList.add("active");
+       }
       }
      })
      .catch((error) => {
       console.error("Error loading content:", error);
-      const contentDiv = document.getElementById("content");
-      if (contentDiv) {
-       contentDiv.innerHTML =
-        "<h2>Error loading the page. Please try again.</h2>";
-      }
+      document.getElementById("content").innerHTML =
+       "<h2>Error loading the page. Please try again.</h2>";
      });
    }
+
+   function executeScriptsInElement(element) {
+    const scriptTags = element.querySelectorAll("script");
+    scriptTags.forEach((script) => {
+     const newScript = document.createElement("script");
+
+     // If the script uses ES6 imports, set type="module"
+     if (script.type === "module" || script.src.includes(".js")) {
+      newScript.type = "module";
+     }
+
+     newScript.textContent = script.textContent;
+     document.body.appendChild(newScript);
+     document.body.removeChild(newScript); // Remove after execution
+    });
+   }
+
+   // Initialize the page with the header and sidebar
+   window.onload = () => {
+    loadHeader();
+    loadSidebar();
+   };
   </script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
  </body>
 </html>
