--- a/pages/auth/adminLogin.html
+++ b/pages/auth/adminLogin.html
@@ -123,12 +123,14 @@
      const data = await response.json();
      // Check if the login is successful
      if (response.ok) {
-      localStorage.setItem("authToken", data.token);
+      const token = data.token.split("|")[1]; // This gets everything after the
+      localStorage.setItem("authToken", token);
       localStorage.setItem("role", "admin");
       localStorage.setItem("email", data.user.email);
       localStorage.setItem("firstName", data.user.first_name);
       localStorage.setItem("lastName", data.user.last_name);
       localStorage.setItem("admin_id", data.user.admin_id);
+
       Toastify({
        text: "Login Successful! Redirecting...",
        duration: 3000,
