--- a/pages/auth/inspectorLogin.html
+++ b/pages/auth/inspectorLogin.html
@@ -20,25 +20,31 @@
    body {
     font-family: "Poppins", sans-serif;
    }
+   img {
+    max-height: 100%; /* Prevents overflow */
+    max-width: 100%; /* Ensures responsiveness */
+    object-fit: contain; /* Maintains aspect ratio */
+   }
   </style>
  </head>
- <body id="inspectLogin" class="vh-100 d-flex align-items-center bg-light">
+ <body id="inspectLogin" class="vh-100 d-flex align-items-center">
   <div class="container-fluid h-100">
    <div class="row h-100">
     <!-- Left column with background -->
     <div
-     class="col-xl-6 bg-primary d-flex align-items-center justify-content-center"
+     class="col-lg-8 d-flex align-items-center justify-content-center text-white"
     >
      <img
-      src="../../assets/images/bxu-logo.png"
+      src="/assets/InspectorLoginPicture.jpg"
       alt="BXU Logo"
-      class="img-fluid"
-      style="max-width: 300px"
+      class="vh-100"
      />
     </div>
 
     <!-- Right column with login form -->
-    <div class="col-md-6 d-flex align-items-center justify-content-center">
+    <div
+     class="col-lg-4 d-flex align-items-center justify-content-center bg-light"
+    >
      <div class="card shadow-sm rounded-4" style="min-width: 400px">
       <div class="card-body p-5">
        <h4 class="card-title text-center mb-4">Inspector Login</h4>
