--- a/pages/auth/adminLogin.html
+++ b/pages/auth/adminLogin.html
@@ -80,7 +80,11 @@
         <button type="submit" class="btn btn-primary w-100 mb-3">Login</button>
 
         <div class="text-center">
-         <a href="#" class="text-decoration-none small">Forgot Password?</a>
+         <a
+          href="forgotPassword.html?role=admin"
+          class="text-decoration-none small"
+          >Forgot Password?</a
+         >
         </div>
        </form>
       </div>
