feat: ⚡ added spinner when making request + added change password page with form

--- a/pages/auth/forgotPassword.html
+++ b/pages/auth/forgotPassword.html
@@ -56,6 +56,9 @@
    .text-center a:hover {
     text-decoration: underline; /* Underline on hover */
    }
+   .spinner-border {
+    display: none; /* Initially hidden */
+   }
   </style>
  </head>
  <body>
@@ -71,10 +74,15 @@
        </div>
        <button type="submit" class="btn btn-primary w-100">
         Send Reset Link
+        <span
+         class="spinner-border spinner-border-sm ms-2"
+         role="status"
+         aria-hidden="true"
+        ></span>
        </button>
       </form>
       <div class="text-center mt-3">
-       <a href="adminLogin.html" class="text-decoration-none">Back to Login</a>
+       <a href="index.html" class="text-decoration-none">Back to Login</a>
       </div>
      </div>
     </div>
@@ -98,6 +106,10 @@
     e.preventDefault();
 
     const email = document.getElementById("email").value;
+    const spinner = document.querySelector(".spinner-border");
+
+    // Show the spinner
+    spinner.style.display = "inline-block";
 
     try {
      const response = await fetch(apiUrl + "/auth/change-password-request", {
@@ -110,6 +122,9 @@
      });
 
      const data = await response.json();
+
+     // Hide the spinner
+     spinner.style.display = "none";
 
      if (response.ok) {
       Toastify({
@@ -132,6 +147,9 @@
       }).showToast();
      }
     } catch (err) {
+     // Hide the spinner
+     spinner.style.display = "none";
+
      Toastify({
       text: "Internal server error, please try again later",
       duration: 3000,
