--- a/pages/auth/changePassword.html
+++ b/pages/auth/changePassword.html
@@ -128,6 +128,7 @@
    // Extract token and email from the URL
    const params = new URLSearchParams(window.location.search);
    const token = params.get("token");
+   console.log("Token: ", token);
    const encryptedEmail = params.get("email");
 
    changePasswordForm.addEventListener("submit", async (e) => {
@@ -139,6 +140,8 @@
 
     // Validate passwords
     if (newPassword !== confirmPassword) {
+     console.log(newPassword);
+     console.log(confirmPassword);
      Toastify({
       text: "Passwords do not match!",
       duration: 3000,
@@ -155,10 +158,6 @@
     // Show the spinner
     spinner.style.display = "inline-block";
 
-    const decryptedEmail = atob(encryptedEmail);
-
-    console.log("Decrypted Email:", decryptedEmail);
-
     try {
      const response = await fetch(apiUrl + "/auth/change-password", {
       method: "POST",
@@ -168,8 +167,8 @@
       },
       body: JSON.stringify({
        token, // Include token
-       email: decryptedEmail, // Include encrypted email
-       newPassword, // Send new password
+       email: encryptedEmail, // Include encrypted email
+       password: newPassword, // Send new password
       }),
      });
 
