--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -13,6 +13,10 @@
    rel="stylesheet"
   />
   <link rel="stylesheet" href="css/main.css" />
+  <link
+   rel="stylesheet"
+   href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+  />
   <style>
    body {
     font-family: "Poppins", sans-serif;
@@ -40,7 +44,40 @@
    </main>
   </div>
 
-  <script>
+  <script type="module">
+   import CONFIG from "/scripts/config.js";
+   const apiUrl = CONFIG.API_BASE_URL;
+   // Define the handleLogout function first
+   const handleLogout = async () => {
+    console.log("Logout button clicked"); // Debugging log
+    const response = await fetch(`${apiUrl}/admin/admin-logout`, {
+     method: "POST",
+     headers: {
+      "Content-Type": "application/json",
+      Authorization: `Bearer ${localStorage.getItem("authToken")}`,
+     },
+    });
+    const data = await response.json();
+    if (response.ok) {
+     localStorage.removeItem("authToken");
+     localStorage.clear();
+
+     Toastify({
+      text: "Logout successful",
+      duration: 3000,
+      close: true,
+      gravity: "top",
+      position: "center",
+      backgroundColor: "linear-gradient(to right, #00b09b, #96c93d)",
+     }).showToast();
+     setTimeout(() => {
+      window.location.href = "../auth/index.html";
+     }, 3000);
+    } else {
+     alert(data.message);
+    }
+   };
+
    // Load the header and sidebar dynamically
    function loadHeader() {
     fetch("components/header.html")
@@ -58,6 +95,7 @@
      .then((res) => res.text())
      .then((data) => {
       document.getElementById("sidebar").innerHTML = data;
+      console.log("Sidebar loaded successfully"); // Debugging log
 
       // Add event listeners to sidebar links
       const links = document.querySelectorAll(".nav-links a");
@@ -68,6 +106,15 @@
         loadContent(page, link); // Pass the link to update active class
        });
       });
+
+      // Add event listener for the logout button
+      const logoutButton = document.getElementById("logoutButton");
+      if (logoutButton) {
+       console.log("Logout button found"); // Debugging log
+       logoutButton.addEventListener("click", handleLogout);
+      } else {
+       console.error("Logout button not found");
+      }
 
       // Load default content (dashboard)
       loadContent("dashboard.html", document.querySelector(".nav-links a"));
@@ -129,5 +176,6 @@
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
  </body>
 </html>
