--- a/pages/inspector/inspector.html
+++ b/pages/inspector/inspector.html
@@ -15,26 +15,29 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-   href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+   href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
    rel="stylesheet"
   />
-<style>
-  body {
-   font-family: "Poppins", Arial, sans-serif !important;
-   background-color: #f4f4f9;
-   margin: 0;
-   padding: 0;
-  }
-  .card {
-   border-radius: 10px;
-   -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
-   box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
-   border: none;
-   margin-bottom: 30px;
-   -webkit-transition: all 0.3s ease-in-out;
-   transition: all 0.3s ease-in-out;
-  }
- </style>
+  <link
+   rel="stylesheet"
+   href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+  />
+  <style>
+   body {
+    font-family: "Poppins", Arial, sans-serif !important;
+    background-color: #f4f4f9;
+    margin: 0;
+    padding: 0;
+   }
+   .card {
+    border-radius: 10px;
+    box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+    border: none;
+    margin-bottom: 30px;
+    transition: all 0.3s ease-in-out;
+   }
+  </style>
+ </head>
  <body>
   <div class="dashboard">
    <!-- Include Header -->
@@ -51,69 +54,96 @@
    </main>
   </div>
 
-  <script>
-   // Load the header
-   fetch("components/header.html")
-    .then((res) => res.text())
-    .then((data) => {
-     document.getElementById("header").innerHTML = data;
-     executeScriptsInElement(document.getElementById("header"));
-    })
-    .catch((error) => console.error("Error loading header:", error));
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <script type="module">
+   import CONFIG from "/scripts/config.js";
+   const apiUrl = CONFIG.API_BASE_URL;
 
-   // Load the sidebar
-   fetch("components/sidebar.html")
-    .then((res) => res.text())
-    .then((data) => {
-     document.getElementById("sidebar").innerHTML = data;
+   // Define the handleLogout function
+   const handleLogout = async () => {
+    console.log("Logout button clicked"); // Debugging log
+    const response = await fetch(`${apiUrl}/inspector/inspector-logout`, {
+     method: "POST",
+     headers: {
+      "Content-Type": "application/json",
+      Authorization: `Bearer ${localStorage.getItem("authToken")}`,
+     },
+    });
+    const data = await response.json();
+    if (response.ok) {
+     localStorage.removeItem("authToken");
+     localStorage.clear();
 
-     // Add event listeners to the links
-     const links = document.querySelectorAll(".nav-links a");
-     links.forEach((link) => {
-      link.addEventListener("click", (event) => {
-       event.preventDefault(); // Prevent default behavior here
-       const page = link.getAttribute("href").substring(1) + ".html"; // Get the page name from the href
-       loadContent(page, link, event); // Pass the actual event object
-      });
-     });
+     Toastify({
+      text: "Logout successful",
+      duration: 3000,
+      close: true,
+      gravity: "top",
+      position: "center",
+      backgroundColor: "linear-gradient(to right, #00b09b, #96c93d)",
+     }).showToast();
+     setTimeout(() => {
+      window.location.href = "../auth/index.html";
+     }, 3000);
+    } else {
+     alert(data.message);
+    }
+   };
 
-     // Load the default content on page load
-     const hash = window.location.hash || "#dashboard"; // Default to dashboard if no hash
-     const page = hash.substring(1) + ".html"; // Get the page name from the hash
-     const activeLink =
-      document.querySelector(`.nav-links a[href="${hash}"]`) ||
-      document.querySelector(".nav-links a.active");
-
-     // Call loadContent with a mock event object for initial load
-     loadContent(page, activeLink, { preventDefault: () => {} }); // Mock event
-    })
-    .catch((error) => console.error("Error loading sidebar:", error));
-
-   // Function to load content
-   function loadContent(page, element, event) {
-    // Prevent default anchor behavior
-    event.preventDefault();
-
-    // Adjust the path to include 'components/'
-    const fullPath = `components/${page}`; // This assumes the files are in the components directory
-
-    console.log("Fetching content from:", fullPath); // Log the page being fetched
-
-    // Fetch the content of the page
-    fetch(fullPath)
-     .then((response) => {
-      if (!response.ok) {
-       throw new Error("Network response was not ok: " + response.statusText);
-      }
-      return response.text();
-     })
+   // Load the header dynamically
+   const loadHeader = () => {
+    fetch("components/header.html")
+     .then((res) => res.text())
      .then((data) => {
-      // Insert the content into the content area
+      document.getElementById("header").innerHTML = data;
+      executeScriptsInElement(document.getElementById("header"));
+     })
+     .catch((error) => console.error("Error loading header:", error));
+   };
+
+   // Load the sidebar dynamically
+   const loadSidebar = () => {
+    fetch("components/sidebar.html")
+     .then((res) => res.text())
+     .then((data) => {
+      document.getElementById("sidebar").innerHTML = data;
+      console.log("Sidebar loaded successfully"); // Debugging log
+
+      // Add event listeners to sidebar links
+      const links = document.querySelectorAll(".nav-links a");
+      links.forEach((link) => {
+       link.addEventListener("click", (event) => {
+        event.preventDefault();
+        const page = link.getAttribute("href").substring(1) + ".html";
+        loadContent(page, link); // Pass the link to update active class
+       });
+      });
+
+      // Add event listener for the logout button
+      const logoutButton = document.getElementById("logoutButton");
+      if (logoutButton) {
+       console.log("Logout button found"); // Debugging log
+       logoutButton.addEventListener("click", handleLogout);
+      } else {
+       console.error("Logout button not found");
+      }
+
+      // Load default content (dashboard)
+      loadContent("dashboard.html", document.querySelector(".nav-links a"));
+     })
+     .catch((error) => console.error("Error loading sidebar:", error));
+   };
+
+   // Load the content dynamically
+   const loadContent = (page, link = null) => {
+    const fullPath = `components/${page}`;
+
+    fetch(fullPath)
+     .then((response) => response.text())
+     .then((data) => {
       const contentDiv = document.getElementById("content");
       if (contentDiv) {
        contentDiv.innerHTML = data;
-
-       // Execute any scripts from the loaded content
        executeScriptsInElement(contentDiv);
 
        // Remove 'active' class from all links
@@ -121,22 +151,20 @@
        links.forEach((link) => link.classList.remove("active"));
 
        // Add 'active' class to the clicked link
-       element.classList.add("active");
-      } else {
-       console.error("Content div not found");
+       if (link) {
+        link.classList.add("active");
+       }
       }
      })
      .catch((error) => {
       console.error("Error loading content:", error);
-      const contentDiv = document.getElementById("content");
-      if (contentDiv) {
-       contentDiv.innerHTML =
-        "<h2>Error loading the page. Please try again.</h2>";
-      }
+      document.getElementById("content").innerHTML =
+       "<h2>Error loading the page. Please try again.</h2>";
      });
-   }
+   };
 
-   function executeScriptsInElement(element) {
+   // Execute scripts in the loaded content
+   const executeScriptsInElement = (element) => {
     const scriptTags = element.querySelectorAll("script");
     scriptTags.forEach((script) => {
      const newScript = document.createElement("script");
@@ -150,8 +178,15 @@
      document.body.appendChild(newScript);
      document.body.removeChild(newScript); // Remove after execution
     });
-   }
+   };
+
+   // Initialize the page with the header and sidebar
+   window.onload = () => {
+    loadHeader();
+    loadSidebar();
+   };
   </script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
  </body>
 </html>
