fix:  🔨 modfied modal UI and fixed undefined inspector in inspection details modal

--- a/pages/auth/adminLogin.html
+++ b/pages/auth/adminLogin.html
@@ -193,6 +193,7 @@
      // Enable the login button and hide the spinner
      loginButton.disabled = false;
      loadingSpinner.classList.add("d-none");
+     document.getElementById("buttonText").textContent = "Login"; // Reset button text
     }
    });
   </script>
