feat: ✨ enhanced inspection details UI with improved hover effects and modal structure; updated navigation and form handling for better user experience

--- a/pages/auth/changePassword.html
+++ b/pages/auth/changePassword.html
@@ -188,7 +188,7 @@
 
       // Optionally redirect to the login page
       setTimeout(() => {
-       window.location.href = "adminLogin.html";
+       window.location.href = "index.html";
       }, 3000);
      } else {
       Toastify({
