--- a/pages/auth/adminLogin.html
+++ b/pages/auth/adminLogin.html
@@ -99,6 +99,11 @@
           >Forgot Password?</a
          >
         </div>
+        <div class="text-center">
+         <a href="index.html" class="text-decoration-none small text-secondary"
+          >back</a
+         >
+        </div>
        </form>
       </div>
      </div>
