--- a/pages/auth/index.html
+++ b/pages/auth/index.html
@@ -21,6 +21,19 @@
    body {
     font-family: "Poppins", sans-serif;
    }
+   .card {
+    transition: transform 0.3s, box-shadow 0.3s; /* Smooth transition */
+   }
+   .card:hover {
+    transform: translateY(-5px); /* Lift effect on hover */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Enhanced shadow */
+   }
+   .card-title {
+    font-size: 1.5rem; /* Increased font size */
+   }
+   .card-text {
+    font-size: 1rem; /* Increased font size */
+   }
   </style>
  </head>
  <body class="vh-100 d-flex align-items-center justify-content-center bg-light">
@@ -41,7 +54,7 @@
    <div class="row justify-content-center g-4">
     <div class="col-md-4">
      <a href="adminLogin.html" class="text-decoration-none">
-     <div class="card h-100 shadow-sm rounded-4 hover-overlay">
+      <div class="card h-100 shadow-sm rounded-4 hover-overlay">
        <div class="card-body text-center p-5">
         <i class="bi bi-person-workspace fs-1 mb-3 text-primary"></i>
         <h4 class="card-title">Administrator</h4>
