feat(auth, profile): 🎨 Redesign forgot password page with responsive layout and enhanced UX

--- a/pages/auth/changePassword.html
+++ b/pages/auth/changePassword.html
@@ -13,7 +13,7 @@
   />
   <!-- Add Poppins font -->
   <link
-   href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+   href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
    rel="stylesheet"
   />
   <!-- Add Toastify CSS -->
@@ -24,92 +24,84 @@
   <style>
    body {
     font-family: "Poppins", sans-serif;
-    background-color: #f8f9fa; /* Light gray background */
-    height: 100vh; /* Full height */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
    }
-   .card {
-    border: 1px solid #dee2e6; /* Subtle border */
-    border-radius: 10px; /* Rounded corners */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Soft shadow */
-    transition: transform 0.2s; /* Smooth transition */
-   }
-   .card:hover {
-    transform: translateY(-5px); /* Slight lift on hover */
-   }
-   .form-label {
-    font-weight: 500; /* Bold labels */
-   }
-   .btn-primary {
-    background-color: #007bff; /* Bootstrap primary color */
-    border: none;
-   }
-   .btn-primary:hover {
-    background-color: #0056b3; /* Darker shade on hover */
-   }
-   .text-center a {
-    color: #007bff; /* Bootstrap link color */
-   }
-   .text-center a:hover {
-    text-decoration: underline; /* Underline on hover */
-   }
-   .eye-icon {
-    cursor: pointer;
-   }
-   .spinner-border {
-    display: none; /* Initially hidden */
+   img {
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
    }
   </style>
  </head>
- <body>
-  <div class="container">
-   <div class="row justify-content-center">
-    <div class="col-lg-6">
-     <div class="card p-5">
-      <h4 class="card-title text-center mb-4">Change Password</h4>
-      <form id="changePasswordForm">
-       <div class="mb-3">
-        <label for="newPassword" class="form-label">New Password</label>
-        <div class="input-group">
-         <input
-          type="password"
-          class="form-control"
-          id="newPassword"
-          required
-         />
-         <span class="input-group-text eye-icon" id="toggleNewPassword">
-          <i class="bi bi-eye-slash"></i>
-         </span>
+ <body class="vh-100">
+  <div class="container-fluid h-100">
+   <div class="row h-100">
+    <!-- Left column with background (larger) -->
+    <div
+     class="col-lg-8 d-flex align-items-center justify-content-center text-white"
+    >
+     <img src="../../assets/unlock.jpg" alt="BXU Logo" class="vh-100" />
+    </div>
+
+    <!-- Right column with form (smaller) -->
+    <div
+     class="col-lg-4 d-flex align-items-center justify-content-center bg-light"
+    >
+     <div class="card shadow-sm rounded-4" style="min-width: 400px">
+      <div class="card-body p-5">
+       <h4 class="card-title text-center mb-4">Change Password</h4>
+       <form id="changePasswordForm">
+        <div class="mb-3">
+         <label for="newPassword" class="form-label small">New Password</label>
+         <div class="input-group">
+          <input
+           type="password"
+           class="form-control small"
+           id="newPassword"
+           required
+          />
+          <span class="input-group-text eye-icon" id="toggleNewPassword">
+           <i class="bi bi-eye-slash"></i>
+          </span>
+         </div>
         </div>
-       </div>
-       <div class="mb-3">
-        <label for="confirmPassword" class="form-label">Confirm Password</label>
-        <div class="input-group">
-         <input
-          type="password"
-          class="form-control"
-          id="confirmPassword"
-          required
-         />
-         <span class="input-group-text eye-icon" id="toggleConfirmPassword">
-          <i class="bi bi-eye-slash"></i>
-         </span>
+        <div class="mb-3">
+         <label for="confirmPassword" class="form-label small"
+          >Confirm Password</label
+         >
+         <div class="input-group">
+          <input
+           type="password"
+           class="form-control small"
+           id="confirmPassword"
+           required
+          />
+          <span class="input-group-text eye-icon" id="toggleConfirmPassword">
+           <i class="bi bi-eye-slash"></i>
+          </span>
+         </div>
         </div>
-       </div>
-       <button type="submit" class="btn btn-primary w-100">
-        Change Password
-        <span
-         class="spinner-border spinner-border-sm ms-2"
-         role="status"
-         aria-hidden="true"
-        ></span>
-       </button>
-      </form>
-      <div class="text-center mt-3">
-       <a href="adminLogin.html" class="text-decoration-none">Back to Login</a>
+        <button
+         type="submit"
+         class="btn btn-primary w-100 mb-3"
+         id="submitButton"
+        >
+         <span id="buttonText">Change Password</span>
+         <div
+          class="spinner-border spinner-border-sm text-light d-none"
+          id="loadingSpinner"
+          role="status"
+         >
+          <span class="visually-hidden">Loading...</span>
+         </div>
+        </button>
+        <div class="text-center">
+         <a
+          href="adminLogin.html"
+          class="text-decoration-none small text-secondary"
+          >Back to Login</a
+         >
+        </div>
+       </form>
       </div>
      </div>
     </div>
@@ -120,6 +112,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Add Toastify JS -->
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <!-- Add Bootstrap Icons -->
+  <link
+   rel="stylesheet"
+   href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+  />
   <script type="module">
    import CONFIG from "/scripts/config.js";
    const apiUrl = CONFIG.API_BASE_URL;
@@ -131,12 +128,19 @@
    console.log("Token: ", token);
    const encryptedEmail = params.get("email");
 
+   const submitButton = document.getElementById("submitButton");
+   const loadingSpinner = document.getElementById("loadingSpinner");
+
    changePasswordForm.addEventListener("submit", async (e) => {
     e.preventDefault();
 
+    // Disable button and show spinner
+    submitButton.disabled = true;
+    document.getElementById("buttonText").textContent = "Processing...";
+    loadingSpinner.classList.remove("d-none");
+
     const newPassword = document.getElementById("newPassword").value;
     const confirmPassword = document.getElementById("confirmPassword").value;
-    const spinner = document.querySelector(".spinner-border");
 
     // Validate passwords
     if (newPassword !== confirmPassword) {
@@ -155,9 +159,6 @@
      return;
     }
 
-    // Show the spinner
-    spinner.style.display = "inline-block";
-
     try {
      const response = await fetch(apiUrl + "/auth/change-password", {
       method: "POST",
@@ -173,9 +174,6 @@
      });
 
      const data = await response.json();
-
-     // Hide the spinner
-     spinner.style.display = "none";
 
      if (response.ok) {
       Toastify({
@@ -203,9 +201,6 @@
       }).showToast();
      }
     } catch (err) {
-     // Hide the spinner
-     spinner.style.display = "none";
-
      Toastify({
       text: "Internal server error, please try again later",
       duration: 3000,
@@ -216,6 +211,11 @@
        background: "red",
       },
      }).showToast();
+    } finally {
+     // Enable button and hide spinner
+     submitButton.disabled = false;
+     loadingSpinner.classList.add("d-none");
+     document.getElementById("buttonText").textContent = "Change Password";
     }
    });
 
@@ -253,10 +253,5 @@
     }
    });
   </script>
-  <!-- Add Bootstrap Icons -->
-  <link
-   rel="stylesheet"
-   href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
-  />
  </body>
 </html>
