--- a/pages/auth/forgotPassword.html
+++ b/pages/auth/forgotPassword.html
@@ -24,7 +24,6 @@
   <style>
    body {
     font-family: "Poppins", sans-serif;
-    background-color: #f8f9fa; /* Light gray background */
     height: 100vh; /* Full height */
     display: flex;
     justify-content: center;
@@ -59,30 +58,51 @@
    .spinner-border {
     display: none; /* Initially hidden */
    }
+   img {
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
+   }
   </style>
  </head>
- <body>
-  <div class="container">
-   <div class="row justify-content-center">
-    <div class="col-lg-6">
-     <div class="card p-5">
-      <h4 class="card-title text-center mb-4">Forgot Password</h4>
-      <form id="forgotPasswordForm">
-       <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" required />
-       </div>
-       <button type="submit" class="btn btn-primary w-100">
-        Send Reset Link
-        <span
-         class="spinner-border spinner-border-sm ms-2"
-         role="status"
-         aria-hidden="true"
-        ></span>
-       </button>
-      </form>
-      <div class="text-center mt-3">
-       <a href="index.html" class="text-decoration-none">Back to Login</a>
+ <body class="vh-100">
+  <div class="container-fluid h-100">
+   <div class="row h-100">
+    <!-- Left column with background (larger) -->
+    <div
+     class="col-lg-8 d-flex align-items-center justify-content-center text-white"
+    >
+     <img src="../../assets/email.png" alt="BXU Logo" class="vh-100" />
+    </div>
+
+    <!-- Right column with login form (smaller) -->
+    <div
+     class="col-lg-4 d-flex align-items-center justify-content-center bg-light"
+    >
+     <div class="card shadow-sm rounded-4" style="min-width: 400px">
+      <div class="card-body p-5">
+       <h4 class="card-title text-center mb-4">Forgot Password</h4>
+       <form id="forgotPasswordForm">
+        <div class="mb-3">
+         <label for="email" class="form-label small">Email</label>
+         <input type="email" class="form-control small" id="email" required />
+        </div>
+        <button type="submit" class="btn btn-primary w-100 mb-3">
+         <span id="buttonText">Send Reset Link</span>
+         <div
+          class="spinner-border spinner-border-sm text-light d-none"
+          id="loadingSpinner"
+          role="status"
+         >
+          <span class="visually-hidden">Loading...</span>
+         </div>
+        </button>
+        <div class="text-center">
+         <a href="index.html" class="text-decoration-none small text-secondary"
+          >Back to Login</a
+         >
+        </div>
+       </form>
       </div>
      </div>
     </div>
@@ -102,14 +122,18 @@
    const urlParams = new URLSearchParams(window.location.search);
    const role = urlParams.get("role"); // Get the role from the URL
 
+   const loadingSpinner = document.getElementById("loadingSpinner");
+   const loginButton = document.querySelector("button[type='submit']");
+
    forgotPasswordForm.addEventListener("submit", async (e) => {
     e.preventDefault();
 
-    const email = document.getElementById("email").value;
-    const spinner = document.querySelector(".spinner-border");
+    // Disable button and show spinner
+    loginButton.disabled = true;
+    document.getElementById("buttonText").textContent = "Sending...";
+    loadingSpinner.classList.remove("d-none");
 
-    // Show the spinner
-    spinner.style.display = "inline-block";
+    const email = document.getElementById("email").value;
 
     try {
      const response = await fetch(apiUrl + "/auth/change-password-request", {
@@ -122,9 +146,6 @@
      });
 
      const data = await response.json();
-
-     // Hide the spinner
-     spinner.style.display = "none";
 
      if (response.ok) {
       Toastify({
@@ -147,9 +168,6 @@
       }).showToast();
      }
     } catch (err) {
-     // Hide the spinner
-     spinner.style.display = "none";
-
      Toastify({
       text: "Internal server error, please try again later",
       duration: 3000,
@@ -160,6 +178,11 @@
        background: "red",
       },
      }).showToast();
+    } finally {
+     // Enable button and hide spinner
+     loginButton.disabled = false;
+     loadingSpinner.classList.add("d-none");
+     document.getElementById("buttonText").textContent = "Send Reset Link";
     }
    });
   </script>
