fix: fixed issue in loading spinner after error submiting password

--- a/pages/auth/changePassword.html
+++ b/pages/auth/changePassword.html
@@ -156,6 +156,11 @@
        background: "red",
       },
      }).showToast();
+
+     // Reset button state on validation error
+     submitButton.disabled = false;
+     loadingSpinner.classList.add("d-none");
+     document.getElementById("buttonText").textContent = "Change Password";
      return;
     }
 
@@ -167,9 +172,9 @@
        "Content-Type": "application/json",
       },
       body: JSON.stringify({
-       token, // Include token
-       email: encryptedEmail, // Include encrypted email
-       password: newPassword, // Send new password
+       token,
+       email: encryptedEmail,
+       password: newPassword,
       }),
      });
 
@@ -189,6 +194,11 @@
        window.location.href = "index.html";
       }, 3000);
      } else {
+      // Reset button state on API error
+      submitButton.disabled = false;
+      loadingSpinner.classList.add("d-none");
+      document.getElementById("buttonText").textContent = "Change Password";
+
       Toastify({
        text: data.message || "Error changing password",
        duration: 3000,
@@ -201,6 +211,11 @@
       }).showToast();
      }
     } catch (err) {
+     // Reset button state on network error
+     submitButton.disabled = false;
+     loadingSpinner.classList.add("d-none");
+     document.getElementById("buttonText").textContent = "Change Password";
+
      Toastify({
       text: "Internal server error, please try again later",
       duration: 3000,
@@ -211,11 +226,6 @@
        background: "red",
       },
      }).showToast();
-    } finally {
-     // Enable button and hide spinner
-     submitButton.disabled = false;
-     loadingSpinner.classList.add("d-none");
-     document.getElementById("buttonText").textContent = "Change Password";
     }
    });
 
