fix redirecting to login page

--- a/pages/auth/changePassword.html
+++ b/pages/auth/changePassword.html
@@ -95,9 +95,7 @@
          </div>
         </button>
         <div class="text-center">
-         <a
-          href="adminLogin.html"
-          class="text-decoration-none small text-secondary"
+         <a href="index.html" class="text-decoration-none small text-secondary"
           >Back to Login</a
          >
         </div>
